--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,11 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 body {
     /* background: #F9FAFD; */
