--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -19,7 +19,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: 'Plus Jakarta Sans', sans-serif;
-} */
+}
 
 #root {
     width: 100%;
