--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -71,7 +71,7 @@ header {
   gap: 19px;
 }
 
-.notification-box::before {
+/* .notification-box::before {
   content: '';
   position: absolute;
   top: 5px; /* Adjust the positioning as needed */
@@ -80,7 +80,7 @@ header {
   height: 10px;
   background-color: orange;
   border-radius: 50%;
-}
+} */
 
 .content-img {
   width: 39px;
