--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,8 +7,7 @@
 }
 
 body {
-  /* background: #F9FAFD; */
-  background-color: gray;
+  background: #F9FAFD;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -71,7 +70,7 @@ header {
   gap: 19px;
 }
 
-/* .notification-box::before {
+.notification-box::before {
   content: '';
   position: absolute;
   top: 5px; /* Adjust the positioning as needed */
@@ -80,7 +79,7 @@ header {
   height: 10px;
   background-color: orange;
   border-radius: 50%;
-} */
+}
 
 .content-img {
   width: 39px;
